# Aircraft

./: .gitignore
aircraft_rx/: CMakeLists.txt
aircraft_rx/components/esc/: CMakeLists.txt
aircraft_rx/components/esc/include/: esc.h
aircraft_rx/components/esc/src/: esc.cpp
aircraft_rx/components/freertos_config/: CMakeLists.txt  FreeRTOSConfig.h
aircraft_rx/components/mx1508/: CMakeLists.txt
aircraft_rx/components/mx1508/include/: mx1508.h
aircraft_rx/components/mx1508/src/: mx1508.cpp
aircraft_rx/components/nrf24l01/: CMakeLists.txt
aircraft_rx/components/nrf24l01/include/: nrf24l01_interface.h  rp2040_nrf24l01.h
aircraft_rx/components/nrf24l01/src/: rp2040_nrf24l01.cpp
aircraft_rx/components/servo/: CMakeLists.txt
aircraft_rx/components/servo/include/: servo.h
aircraft_rx/components/servo/src/: servo.cpp
aircraft_rx/main/: CMakeLists.txt  main.cpp
aircraft_tx/: CMakeLists.txt
aircraft_tx/components/nrf24L01/: CMakeLists.txt
aircraft_tx/components/nrf24L01/include/: esp32_nrf24l01.h  nrf24l01_interface.h
aircraft_tx/components/nrf24L01/src/: esp32_nrf24l01.cpp
aircraft_tx/components/socket_communication/: CMakeLists.txt
aircraft_tx/components/socket_communication/include/: socket_communication.h
aircraft_tx/components/socket_communication/src/: socket_communication.cpp
aircraft_tx/components/soft_access_point/: CMakeLists.txt
aircraft_tx/components/soft_access_point/include/: soft_access_point.h
aircraft_tx/components/soft_access_point/src/: soft_access_point.cpp
aircraft_tx/main/: CMakeLists.txt  main.cpp
shared_lib/: CMakeLists.txt
shared_lib/include/: nrf24l01_interface.h
software/AircraftTX/: settings.gradle.kts
software/AircraftTX/app/: build.gradle.kts
software/AircraftTX/app/src/main/: AndroidManifest.xml
software/AircraftTX/app/src/main/res/layout/: activity_login.xml  activity_main.xml  notification_dialog.xml
software/AircraftTX/app/src/main/res/values/: strings.xml  themes.xml
software/AircraftTX/app/src/main/res/values-night/: themes.xml
software/AircraftTX/gradle/wrapper/: gradle-wrapper.properties
(+10 files in other folders)
